Add form, book list form

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>react-kickstart</title>
+    <title>Impact Library Checkout System</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
   </body>
 </html>
