Made the checkout list little nicer

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -9,6 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Impact Library App</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div id="root" class="container"></div>
   </body>
 </html>
