--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style type="text/css">
+      .navbar{
+        background-color: #15a3c6;  
+      }
+      .navbar-inverse .navbar-brand {
+    color: black;
+}
+       .navbar-inverse .navbar-nav>li>a {
+        color: black;
+    }
+
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
