--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -9,17 +9,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style type="text/css">
-      .navbar{
-        background-color: #15a3c6;  
-      }
+  
       .navbar-inverse .navbar-brand {
-    color: black;
-}
-       .navbar-inverse .navbar-nav>li>a {
         color: black;
-    }
+      }
+      .navbar-inverse .navbar-nav>li>a {
+        color: black;
+      }
+      .navbar {
+        background-color: #15a3c6;  
+        position: relative;
+        min-height: 50px;
+        margin-bottom: 20px;
+        border: none;
+        font: normal 1.25em/1em Alice;
+      }
+      .App---ptxxl---3ax0l {
+          padding-top: 0px !important;
+      }
 
     </style>
+
+
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -30,6 +41,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Checked Out</a></li>
+            <li><a href="#">Library</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
