Move checkout books to another page; added filtering feature

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -41,9 +41,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Checked Out</a></li>
-            <li><a href="#">Library</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="/#/checkoutbooks" data-action>Checkout Books</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
           </ul>
